2006-08-01  Tor Lillqvist  <tml@novell.com>

	* source/numeric/diff.cxx (Tm): Remove unused variable.

2006-07-30  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* docs/class_diagram.odg: modified to reflect latest codebase.

	* idl/org/openoffice/sc/solver/makefile.mk: added.

	* source/inc/lpbuilder.hxx: header cleanup.

	* source/inc/nlpbuilder.hxx:
	* source/numeric/nlpbuilder.cxx: added.

	* source/inc/solvemodel.hxx (SolveModel): edited javadoc comment.

	* source/inc/numeric/cellfuncobj.hxx:
	* source/numeric/cellfunc.obj.cxx: added.

	* source/inc/numeric/funcobj.hxx (BaseFuncObj): edited javadoc comment.

	* source/inc/numeric/nlpbase.hxx:
	* source/inc/numeric/nlpbase.cxx: header cleanup & moved implementation
	into its own class.

	* source/inc/numeric/nlpmodel.hxx:
	* source/numeric/nlpmodel.cxx:
	* source/numeric/nlpqnewton.cxx (pushVar, getVars): renamed.

	* source/numeric/makefile.mk: removed diff_test.obj and added cellfunc.obj.

	* source/numeric/nlp_test.cxx: removed.

	* source/ui/makefile.mk: spaces -> tabs.

	* source/ui/solvemodel.cxx: added hook for solving NLP models & made inline
	some method definitions of implementation class.

	* workben/Makefile: modified to make compilation of nlptest easier.

	* workben/nlptest.cxx: added.

2006-07-26  Tor Lillqvist  <tml@novell.com>

	* prj/d.lst: DLLs are in bin, not lib.

2006-07-10  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* source/inc/option.hxx,
	* source/inc/optiondlg.hxx,
	* source/ui/option.cxx,
	* source/ui/optiondlg.cxx: added.

	* source/inc/basedlg.hxx: modified javadoc comments.

	* source/inc/baselistener.hxx,
	* source/ui/baselistener.cxx (ActionObject, ActionListener): modified
	for general purpose use.

	* source/inc/dialog.hxx,
	* source/ui/dialog.cxx (SolverDialog): bits for OptionDialog added.

	* source/inc/listener.hxx,
	* source/ui/listener.cxx (OptionBtnListener): added.  some code cleanup.

	* source/inc/solver.hxx,
	* source/service/service.cxx: pointer to OptionData added.
