@@ -1,3 +1,5 @@
+EXTERNAL_WARNINGS_NOT_ERRORS := TRUE
+
 PRJ=..$/..
 PRJNAME=scsolver
 TARGET=numeric
