@@ -1,3 +1,10 @@
+2006-08-02  Tor Lillqvist  <tml@novell.com>
+
+	* source/numeric/makefile.mk
+	* source/service/makefile.mk
+	* source/ui/makefile.mk
+	* util/makefile.mk: Set EXTERNAL_WARNINGS_NOT_ERRORS to TRUE.
+
 2006-08-01  Tor Lillqvist  <tml@novell.com>
 
 	* source/numeric/diff.cxx (Tm): Remove unused variable.
